# app/Http/Controllers/API/OfferController.php
@@ -13,11 +13,97 @@ use Illuminate\Support\Facades\Validator;
 
 class OfferController extends Controller
 {
+    public function update($id, Request $request) {
+
+        try {
+            $offer = \App\Models\Offer::findOrFail($id);
+            $service = new \App\Services\Offer();
+            $offer = $service->update($offer, $request);
+
+            return response()->json([
+                'success' => true,
+                'message' => 'Offer updated',
+                'date' => $offer
+            ], 200);
+
+        } catch (\Exception $ex) {
+            return response()->json([
+                'success' => false,
+                'message' => $ex->getMessage()
+            ], 400);
+
+        }
+
+
+    }
+
+    public function delete($id) {
+
+        try {
+            $offer = \App\Models\Offer::findOrFail($id);
+            $offer->delete();
+
+            return response()->json([
+                'success' => true,
+                'message' => 'Offer deleted'
+            ], 200);
+
+        } catch (\Exception $ex) {
+            return response()->json([
+                'success' => false,
+                'message' => $ex->getMessage()
+            ], 400);
+
+        }
+
+
+    }
+
+    public function create(Request $request)
+    {
+        try {
+            $validator = Validator::make($request->all(), [
+                'title' => 'required|string|max:255',
+                'category' => 'required|exists:offer_categories,id',
+                'type' => 'required|in:offer,request',
+                'status' => 'required|in:enabled,disabled',
+                'price' => 'required|numeric',
+                'description' => 'required|string',
+            ]);
+
+            $service = new \App\Services\Offer();
+            $offer = $service->create($request);
+
+            return response()->json([
+                'success' => true,
+                'data' => [
+                    $offer
+                ]
+            ], 200);
+
+        } catch (\Exception $ex) {
+            return response()->json([
+                'success' => false,
+                'message' => $ex->getMessage()
+            ], 400);
+
+        }
+
+    }
 
     public function index(Request $request)
     {
         try {
             $collection = Offer::where('neighborhood', '=', $request->user()->neighborhood_id)->with('user')->with('relatedCategory');
+
+            if ($request->owner) {
+                $collection->where('owner', '=', $request->owner);
+            }
+            if ($request->category) {
+                $collection->where('category', '=', $request->category);
+            }
+
+            $collection->orderByDesc('created_at');
 
             return response()->json([
                 'success' => true,
