# app/Http/Resources/AnnouncementResource.php
@@ -5,7 +5,7 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class OfferResource extends JsonResource
+class AnnouncementResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -18,16 +18,11 @@ class OfferResource extends JsonResource
 
         return [
             'id' => $this->id,
-            'user' => $this->user->name,
-            'user_image' => $this->user->image,
-            'title' => $this->title,
-            'description' => $this->description,
-            'image' => $imageHelper->getPublicUrl($this->image),
-            'category' => $this->relatedCategory->title ?? '?',
-            'type' => $this->type,
-            'status' => $this->status,
-            'price' => $this->price,
             'created_at' => $this->created_at,
+            'title' => $this->title,
+            'related_to' => $this->related_to,
+            'related_id' => $this->related_id,
+            'image' => $imageHelper->getPublicUrl($this->image),
         ];
     }
 }
